import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
    id 'java'
    id 'idea'
    id 'maven-publish'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${dependencyManagementVersion}"
    id 'org.springdoc.openapi-gradle-plugin' version "${openapiPlugin}"
    id 'org.openapi.generator' version "${openapiGenerator}"
}

group = 'com.example'
version = '1.0.0'
description = 'api-countries'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

/*
──────────────────────────────────────────────────────
============== NEXUS =============
──────────────────────────────────────────────────────
*/

def loadEnvFile() {
    def env = [:]
    def envFile = new File(rootDir, "../.env")
    if (envFile.exists()) {
        envFile.eachLine { line ->
            if (line.trim() && !line.startsWith('#') && line.contains('=')) {
                def (k, v) = line.split('=', 2).collect { it.trim() }
                env[k] = v
            }
        }
    }
    return env
}

def envVars = loadEnvFile()

def nexusUrl = System.getenv("NEXUS_URL") ?: envVars["NEXUS_URL"]
def nexusUser = System.getenv("NEXUS_USERNAME") ?: System.getenv("NEXUS_USER") ?: envVars["NEXUS_USERNAME"] ?: envVars["NEXUS_USER"]
def nexusPassword = System.getenv("NEXUS_PASSWORD") ?: envVars["NEXUS_PASSWORD"]

if (!nexusUrl || !nexusUser || !nexusPassword) {
    throw new GradleException(
            "Missing Nexus credentials! Ensure NEXUS_URL, NEXUS_USERNAME (or NEXUS_USER), " +
                    "and NEXUS_PASSWORD are set in .env or Environment Variables."
    )
}

repositories {
    mavenCentral()
    maven {
        url = uri(nexusUrl)
        allowInsecureProtocol = true
        if (nexusUrl.toString().startsWith("http")) {
            credentials {
                username = nexusUser
                password = nexusPassword
            }
        }
    }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openapi}"
    implementation "io.swagger.core.v3:swagger-annotations:${swaggerAnnotation}"
    implementation 'org.springframework.kafka:spring-kafka'
    implementation "com.auth0:java-jwt:${jwtVersion}"
    implementation "org.mapstruct:mapstruct:${mapstruct}"
    implementation "jakarta.xml.bind:jakarta.xml.bind-api:${jakartaXmlBindApi}"

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct}"

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:mongodb'
    testImplementation 'org.testcontainers:kafka'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named("openApiGenerate") {
    enabled = false
}

/*
──────────────────────────────────────────────────────
============== OPEN API GENERATION =============
──────────────────────────────────────────────────────
*/

openApi {
    apiDocsUrl.set("http://localhost:8080/v3/api-docs.yaml")
    outputDir.set(file("openapi"))
    outputFileName.set("api-countries.yaml")
    waitTimeInSeconds.set(30)

    customBootRun {
        args.add("--spring.profiles.active=dev")
    }
}

def openApiDir = layout.projectDirectory.dir("openapi")

def outRoot = layout.buildDirectory.dir("generated/openapi")

def foundSpecifications = fileTree(openApiDir).matching {
    include "**/*.yaml", "**/*.yml"
}

foundSpecifications.each { specFile ->
    def specName = specFile.name.replaceAll(/\.(yaml|yml)$/, '')
    def subPackage = specName.replaceAll(/[^A-Za-z0-9]/, '').toLowerCase()
    def taskName = "generate${specName.split(/[^A-Za-z0-9]/).collect { it.capitalize() }.join('')}Api"

    tasks.register(taskName, GenerateTask) {
        generatorName.set("spring")
        inputSpec.set(specFile.absolutePath)
        outputDir.set(outRoot.map { it.dir(subPackage).asFile.absolutePath })

        def basePkg = "com.example.apicountries.${specName.replaceAll(/[^A-Za-z0-9]/, '').toLowerCase()}"

        configOptions.set([
                library             : "spring-boot",
                useJakartaEe        : "true",
                interfaceOnly       : "true",
                skipDefaultInterface: "true",
                useBeanValidation   : "true",
                openApiNullable     : "false",
                useFeignClientUrl   : "true",
                useTags             : "true",
                apiPackage          : "${basePkg}.api",
                modelPackage        : "${basePkg}.dto",
                configPackage       : "${basePkg}.config"
        ])
    }
}

def apiJars = foundSpecifications.collect { specFile ->
    def specName = specFile.name.replaceAll(/\.(yaml|yml)$/, '')
    def cleanName = specName.replaceAll(/[^A-Za-z0-9]/, '').toLowerCase()
    def generateTaskName = "generate${specName.split(/[^A-Za-z0-9]/).collect { it.capitalize() }.join('')}Api"

    def apiSourceSet = sourceSets.create(cleanName) {
        java {
            srcDir outRoot.map { it.dir("${cleanName}/src/main/java") }
        }
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }

    tasks.named("compile${cleanName.capitalize()}Java") {
        dependsOn(generateTaskName)
    }

    return tasks.register("${cleanName}Jar", Jar) {
        group = "build"
        archiveBaseName.set(specName)
        archiveClassifier.set("api")
        from apiSourceSet.output
        dependsOn(generateTaskName)
    }
}

publishing {
    publications {
        foundSpecifications.each { specFile ->
            def specName = specFile.name.replaceAll(/\.(yaml|yml)$/, '')
            def cleanName = specName.replaceAll(/[^A-Za-z0-9]/, '').toLowerCase()

            def jarTaskName = "${cleanName}Jar"

            register("${cleanName}Publication", MavenPublication) {
                artifact tasks.named(jarTaskName)

                groupId = 'com.example.apicountries'
                artifactId = specName
                version = '1.0.0'

                pom {
                    name = "Generated API ${specName}"
                    description = "OpenAPI generated code for ${specName}"
                }
            }
        }
    }
}

def generateAllOpenApi = tasks.register("generateAllOpenApi") {
    group = "openapi"
    dependsOn tasks.withType(GenerateTask)
}

sourceSets {
    main {
        java {
            srcDir outRoot.map { it.dir("src/main/java") }
        }
    }
}

tasks.named("compileJava") {
    dependsOn(generateAllOpenApi)
}

tasks.named("build") {
    dependsOn apiJars
}

idea {
    module {
        def genDir = file("${getRootDir()}/generated/openapi/src/main/java")
        generatedSourceDirs += genDir
    }
}